--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "bootstrap": "^5.2.3",
     "currency-formatter": "^1.5.9",
-    "framer-motion": "^6.4.1",
+    "framer-motion": "^8.5.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.0.0",
-    "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.4.0",
-    "react-quill": "^2.0.0-beta.4",
-    "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
-    "react-to-print": "^2.14.7",
+    "react-to-print": "^2.14.11",
     "sweetalert": "^2.1.2",
-    "swiper": "^8.3.0",
-    "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "swiper": "^9.0.0",
+    "uuid": "^9.0.0",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,9 +52,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "postcss-import": "^14.1.0",
-    "tailwindcss": "^3.0.24"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.2.4"
   }
 }
